tests/tsc-references/internalModules/importDeclarations/invalidImportAliasIdentifiers/input.ts/es2015.1.normal/output.js
// none of these should work, since non are actually modules
var V = 12;
class C {
}
var c = C;
var E1;
var E;
(function(E) {
    E[E["Red"] = 0] = "Red";
    E[E["Blue"] = 1] = "Blue";
})(E1 || (E1 = {
}));
var e = E1;
var i = I;
export { };
